--- a/発表概要.md
+++ b/発表概要.md
@@ -7,15 +7,19 @@ CSV の中身検証 → 解決済み → 後日実装予定
 ・ヘルプセンターを読み込んで、その他は対応できた。(CSV ダウンロード関係)
 
 **不安点**
-作業速度：今回は 21 時間くらい
+作業速度
+・今回は 21 時間ほど
+・理解にも時間がかかっている様子
 
 **希望**
-Playwright でもやってみたい。
+Playwright でもやってみたい
 (MagicPod が苦痛な訳ではない)
 
 **未来の展望**
-丁寧に、細かいことも教えられるような、気が付くような人間になりたい。
+丁寧に、細かいことも教えられるような人間になりたい。
 指導が出来るようになりたい。
+→ 知識をもっと深めたい。
+
 コーディングや組み込み系もやってみたい。
 
 **職場へ不安点**
