--- a/発表概要.md
+++ b/発表概要.md
@@ -1,22 +1,28 @@
 ### MagicPod プチ発表会
 
-**疑問点**
-パーティションの個数証明 → 解決済み → 後日実装予定
-CSV の中身検証 → 解決済み → 後日実装予定
+### 本人談
+
+**進捗**
+・ヘルプセンターを読み込んで、大体は実装できた。
+・時間が足りず、コメントや空行等可読性を上げる工夫は出来ていない。
+・同様の理由で、フェーズ 4 の期待値確認は未実装。
+
+### 疑問点
+
+・パーティションの個数証明 → 解決済み → 後日実装予定
+・CSV の中身検証 → 解決済み → 後日実装予定
 ・上二点はテストシナリオを見た時点から、実装出来るか不安だった。
-・ヘルプセンターを読み込んで、その他は対応できた。(CSV ダウンロード関係)
 
 **不安点**
 作業速度
 ・今回は 21 時間ほど
-・理解にも時間がかかっている様子
 
 **希望**
 Playwright でもやってみたい
 (MagicPod が苦痛な訳ではない)
 
 **未来の展望**
-丁寧に、細かいことも教えられるような人間になりたい。
+外崎さんのように、丁寧で細かく教えられるような人間になりたい。
 指導が出来るようになりたい。
 → 知識をもっと深めたい。
 
@@ -27,3 +33,11 @@ Playwright でもやってみたい
 
 **技専時代**
 メンタルコーチだった。
+
+### 個人的感想
+
+・大体の事は出来ている。
+・UI 要素や画面キャプチャの名前もきちんと変更出来ている。(完成後再確認予定)
+・理解に時間がかかっていそうだなと思った。(理解したことを覚えていてくれるなら問題ない)
+・1 個躓くと先に進めないタイプの様子。
+・できないことはできない、とある程度の時点で足切りして、まず全体をザっと作るメンタリティを養ってくれれば良いなと思った。
